使用AOP优化日志插入代码